feat: support ignored paths in doc viewer
